<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/space_sm"
    android:background="@drawable/bg_bubble_text"
    android:orientation="vertical">

    <TextView
        android:id="@+id/text_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/color_text_primary"
        android:textIsSelectable="true"
        android:textSize="@dimen/text_body" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_timestamp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/color_text_secondary"
            android:textSize="@dimen/text_small" />

        <TextView
            android:id="@+id/text_send_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/color_text_secondary"
            android:textSize="@dimen/text_small" />

        <Button
            android:id="@+id/button_retry"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_marginStart="@dimen/space_sm"
            android:background="@drawable/bg_button_secondary"
            android:text="@string/retry"
            android:visibility="gone" />

        <ImageButton
            android:id="@+id/button_copy"
            android:layout_width="@dimen/chat_text_action_size"
            android:layout_height="@dimen/chat_text_action_size"
            android:background="@android:color/transparent"
            android:contentDescription="@string/copy"
            android:src="@drawable/ic_copy" />

        <ImageButton
            android:id="@+id/button_more"
            android:layout_width="@dimen/chat_text_action_size"
            android:layout_height="@dimen/chat_text_action_size"
            android:background="@android:color/transparent"
            android:contentDescription="@string/delete"
            android:src="@drawable/ic_more_vert" />
    </LinearLayout>
</LinearLayout>
