<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/space_sm"
    android:background="@drawable/bg_bubble_file"
    android:gravity="center_vertical"
    android:orientation="horizontal">

    <ImageView
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:contentDescription="@string/view"
        android:src="@drawable/ic_file" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_md"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_filename"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="@color/color_text_primary"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_metadata"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/color_text_secondary"
            android:textSize="@dimen/text_small" />

        <TextView
            android:id="@+id/text_timestamp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/color_text_secondary"
            android:textSize="@dimen/text_small" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="@dimen/touch_target"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/button_view"
            android:layout_width="@dimen/touch_target"
            android:layout_height="@dimen/touch_target"
            android:background="@android:color/transparent"
            android:contentDescription="@string/view"
            android:src="@drawable/ic_eye"
            android:tint="@color/ic_tint" />

        <ImageButton
            android:id="@+id/button_download"
            android:layout_width="@dimen/touch_target"
            android:layout_height="@dimen/touch_target"
            android:background="@android:color/transparent"
            android:contentDescription="@string/download"
            android:src="@drawable/ic_download" />

        <ImageButton
            android:id="@+id/button_more"
            android:layout_width="@dimen/touch_target"
            android:layout_height="@dimen/touch_target"
            android:background="@android:color/transparent"
            android:contentDescription="@string/delete"
            android:src="@drawable/ic_more_vert" />
    </LinearLayout>
</LinearLayout>
